[project]
name = "bell-example"
version = "0.1.0"
description = "Bell-state example — the simplest possible QDevOps run."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "qdevops-io>=0.1.0,<0.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
